# askgraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmarks.yml  ci.yml
evals/: autoresearch.yaml  llm-council.yaml  tinygrad-nn.yaml
examples/: self_demo.py
scripts/: run_benchmarks.py
src/askgraph/: __init__.py  __main__.py  config.py  mcp_server.py
src/askgraph/cli/: __init__.py  app.py
src/askgraph/eval/: __init__.py  harness.py
src/askgraph/graph/: __init__.py
src/askgraph/indexing/: __init__.py  chunking.py  indexer.py  parsers.py
src/askgraph/query/: __init__.py  graph.py  retriever.py  synthesizer.py
src/askgraph/report/: __init__.py  generator.py
src/askgraph/tui/: __init__.py  app.py
src/askgraph/utils/: __init__.py  discovery.py  logging.py
tests/: test_basic.py  test_eval.py  test_graph_report.py  test_incremental.py  test_lexical.py  test_units.py
