[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askgraph"
version = "0.2.0"
description = "Local-first, privacy-first codebase QA with structural knowledge graphs. Ask questions about your code — no data leaves your machine."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alexander Bakhliustov", email = "99645323+bakhliustov@users.noreply.github.com"},
]
keywords = ["rag", "codebase", "knowledge-graph", "local-llm", "ollama", "tree-sitter", "cli", "developer-tools", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "fastembed>=0.3",
    "ollama>=0.3",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
]
tree-sitter-full = [
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    # Add more languages as needed
]
viz = [
    "matplotlib>=3.9",
]
git = [
    "GitPython>=3.1",
]
tui = [
    "textual>=0.80",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
askgraph = "askgraph.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/askgraph"]

[project.urls]
Homepage = "https://github.com/bakhliustov/askgraph"
Repository = "https://github.com/bakhliustov/askgraph"
Issues = "https://github.com/bakhliustov/askgraph/issues"
Documentation = "https://github.com/bakhliustov/askgraph#readme"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["askgraph"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
]

[dependency-groups]
dev = [
    "askgraph[dev,tree-sitter-full,viz,git,tui,mcp]",
]
